# portfolio-tracker

./: .gitignore  LICENSE  README.md  docker-compose.yml  generate_sample.py  import_excel.py  sample.xlsx
.github/workflows/: build.yml
backend/: Dockerfile  database.py  main.py  models.py  pyproject.toml  schemas.py  seed_demo.py
backend/routers/: assets.py  cashflows.py  categories.py  dashboard.py  export.py  fx.py  snapshots.py  transactions.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: Modal.jsx  Pill.jsx  Sidebar.jsx  Toast.jsx
frontend/src/pages/: AssetsPage.jsx  Dashboard.jsx  History.jsx  Portfolio.jsx  RecordMonth.jsx  Transactions.jsx
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-secret.yaml  postgres-service.yaml  secret.yaml  service.yaml
