[project]
name = "portfolio-tracker-backend"
version = "0.1.0"
description = "Portfolio tracker API"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "sqlalchemy==2.0.30",
    "psycopg2-binary>=2.9.10",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "alembic==1.13.1",
    "python-multipart==0.0.9",
    "openpyxl==3.1.2",
]

[project.optional-dependencies]
import = [
    "requests>=2.31.0",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev   = "uvicorn main:app --reload --host 0.0.0.0 --port 8000"
start = "uvicorn main:app --host 0.0.0.0 --port 8000"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "requests>=2.33.1",
]
